@@ -223,15 +223,28 @@ name|int
 name|hashCode
 parameter_list|()
 block|{
-return|return
-operator|(
-name|int
-operator|)
+name|long
+name|v
+init|=
 name|Double
 operator|.
 name|doubleToLongBits
 argument_list|(
 name|value
+argument_list|)
+decl_stmt|;
+return|return
+call|(
+name|int
+call|)
+argument_list|(
+name|v
+operator|^
+operator|(
+name|v
+operator|>>>
+literal|32
+operator|)
 argument_list|)
 return|;
 block|}
